--- a/Mobile/ios/Podfile
+++ b/Mobile/ios/Podfile
@@ -12,6 +12,10 @@ target 'Mobile' do
     :hermes_enabled => false
   )
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'MobileTests' do
     inherit! :complete
     # Pods for testing
