--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -16,9 +16,18 @@
     "react": "16 || 17",
     "react-native": ">=0.57",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.0.0"
+    "react-native-screens": "^3.0.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^8.1.0"
+  },
+  "rnpm": {
+    "assets": [
+      "fonts"
+    ]
   },
   "peerDependencies": {
     "react": "16 || 17",
