--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -13,8 +13,13 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "react": "16 || 17",
     "react-native": ">=0.57",
+    "react-native-awesome-alerts": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
@@ -22,7 +27,9 @@
     "react-native-screens": "^3.0.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   },
   "rnpm": {
     "assets": [
